# ether_repo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ether_app/: hooks.py
ether_app/config/: desktop.py  docs.py
ether_app/ether/doctype/activity/: activity.js  activity.json  activity.py  test_activity.py
ether_app/ether/doctype/city/: city.js  city.json  city.py  test_city.py
ether_app/ether/doctype/company_registration/: company_registration.js  company_registration.json  company_registration.py  test_company_registration.py
ether_app/ether/doctype/delivery_registration/: delivery_registration.js  delivery_registration.json  delivery_registration.py  test_delivery_registration.py
ether_app/ether/doctype/deliveryman/: deliveryman.js  deliveryman.json  deliveryman.py  test_deliveryman.py
ether_app/ether/doctype/test_doc/: test_doc.js  test_doc.json  test_doc.py  test_test_doc.py
ether_app/ether/doctype/town/: test_town.py  town.js  town.json  town.py
ether_app/ether/number_card/delivery_registration/: delivery_registration.json
ether_app/ether/web_form/company_registration/: company_registration.js  company_registration.json  company_registration.py
ether_app/ether/web_form/delivery_registration/: delivery_registration.js  delivery_registration.json
ether_app/ether/web_form/test_web_form/: test_web_form.js  test_web_form.json
ether_app/ether/web_template/standard_navbar/: standard_navbar.json
ether_app/fixtures/: custom_field.json
ether_app/www/: login.html  login.py
(+5 files in other folders)
